istio/authorization-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: product-allow-rules
  namespace: yas-dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: product
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/yas-dev/sa/storefront-bff"
        - "cluster.local/ns/yas-dev/sa/backoffice-bff"
        - "cluster.local/ns/yas-dev/sa/order"
        - "cluster.local/ns/yas-dev/sa/search"
        - "cluster.local/ns/yas-dev/sa/inventory"
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: cart-allow-rules
  namespace: yas-dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cart
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/yas-dev/sa/storefront-bff"
        - "cluster.local/ns/yas-dev/sa/order"
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: search-allow-rules
  namespace: yas-dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: search
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/yas-dev/sa/storefront-bff"
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: order-allow-rules
  namespace: yas-dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: order
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/yas-dev/sa/storefront-bff"
        - "cluster.local/ns/yas-dev/sa/payment"
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: tax-allow-rules
  namespace: yas-dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: tax
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/yas-dev/sa/order"
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: inventory-allow-rules
  namespace: yas-dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: inventory
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/yas-dev/sa/storefront-bff"
        - "cluster.local/ns/yas-dev/sa/backoffice-bff"
